# jolt

./: .gitmodules  Cargo.toml
examples/bitwise/: Cargo.toml
examples/bitwise/guest/: Cargo.toml
examples/bitwise/guest/src/: lib.rs  main.rs
examples/bitwise/src/: main.rs
examples/fibonacci/: Cargo.toml
examples/fibonacci/src/: main.rs
jolt-core/: Cargo.toml
jolt-core/src/: lib.rs  zolt_compat_test.rs
jolt-core/src/field/challenge/: mont_ark_u128.rs
jolt-core/src/poly/: opening_proof.rs  prefix_suffix.rs  split_eq_poly.rs  unipoly.rs
jolt-core/src/subprotocols/: booleanity.rs  sumcheck.rs  univariate_skip.rs
jolt-core/src/transcripts/: blake2b.rs  keccak.rs  transcript.rs
jolt-core/src/zkvm/: mod.rs  proof_serialization.rs  prover.rs  verifier.rs
jolt-core/src/zkvm/bytecode/: mod.rs  read_raf_checking.rs
jolt-core/src/zkvm/claim_reductions/: hamming_weight.rs  increments.rs  instruction_lookups.rs  ram_ra.rs  registers.rs
jolt-core/src/zkvm/instruction/: addiw.rs  addw.rs  mod.rs  slli.rs
jolt-core/src/zkvm/instruction_lookups/: read_raf_checking.rs
jolt-core/src/zkvm/r1cs/: key.rs
jolt-core/src/zkvm/ram/: mod.rs  raf_evaluation.rs  read_write_checking.rs  val_evaluation.rs  val_final.rs
jolt-core/src/zkvm/registers/: read_write_checking.rs  val_evaluation.rs
jolt-core/src/zkvm/spartan/: outer.rs  product.rs  (+1 more)
jolt-evm-verifier/: foundry.toml
jolt-evm-verifier/src/reference/: JoltVerifier.sol
jolt-evm-verifier/test/: GrandProductArgumentGasWrapper.sol
jolt-evm-verifier/test/base/: TestBaseJolt.sol
jolt-sdk/: Cargo.toml
(+3 files in other folders)
